# AutoLyrics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  demo.py  demo_realtime.py  docker-compose.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt  run_complete.py  setup.py
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
configuration/: base.yaml  dali.yaml  default.yaml  full_finetuna.yaml  hf.yaml  jamendo.yaml  lora_decoder.yaml  lora_encode_decoder.yaml  nus48e.yaml  qlora_decoder.yaml  whisper_large.yaml  whisper_medium.yaml  whisper_small.yaml
core/: __init__.py  audio.py  config.py  constants.py  device.py  io.py  logging.py  seed.py  visualization.py
data/mock_singing/: manifest.json
data_pipeline/: __init__.py  augmentation.py  collator.py  dataset.py  download.py  loaders.py  preprocessing.py
evaluation/: __init__.py  benchmarks.py  error_analysis.py  evaluator.py  metrics.py  report_generator.py
interference/: __init__.py  pipeline.py  postprocessing.py  predictor.py
models/: __init__.py  lora_config.py  quantization.py  whisper_model.py
scripts/: benchmark.py  create_mock_data.py  download_datasets.py  evaluate.py  generate_report.py  preprocess_data.py  train.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_audio.py  test_config.py  test_metrics.py  test_postprocessing.py
training/: __init__.py  callbacks.py  trainer.py
ui/: __init__.py  gradio_app.py
