[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolyrics"
version = "0.1.0"
description = "Singing-aware ASR via LoRA fine-tuning of Whisper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AutoLyrics Authors" }]
keywords = ["asr", "whisper", "singing", "lyrics", "lora", "peft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.2.0,<3.0.0",
    "torchaudio>=2.2.0,<3.0.0",
    "transformers>=4.40.0,<5.0.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "datasets>=2.19.0",
    "bitsandbytes>=0.43.0; platform_system!='Darwin'",
    "evaluate>=0.4.1",
    "jiwer>=3.0.3",
    # Audio
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "audiomentations>=0.35.0",
    "pydub>=0.25.1",
    # Config & utilities
    "omegaconf>=2.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    # Tracking
    "mlflow>=2.12.0",
    "tensorboard>=2.16.0",
    # API & demo
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "gradio>=4.31.0",
    # Reporting
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "reportlab>=4.1.0",
    "jinja2>=3.1.3",
    # Data fetching
    "requests>=2.31.0",
    "huggingface-hub>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-requests",
    "pre-commit>=3.7.0",
]
wandb = ["wandb>=0.16.0"]
flash = ["flash-attn>=2.5.0"]

[project.scripts]
autolyrics = "autolyrics.cli:app"

[tool.setuptools]
packages = ["core", "api", "data_pipeline", "evaluation", "models", "scripts", "training", "ui"]

[tool.setuptools.package-data]
autolyrics = ["py.typed"]

# -------------------- Ruff --------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff
    "N",             # pep8-naming
]
ignore = ["E501", "B008", "N812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
"scripts/**/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------- MyPy --------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

# -------------------- Pytest --------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires CUDA GPU",
    "integration: integration tests",
    "unit: unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/autolyrics"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]